added functionality for matches visualization page

--- a/groups.html
+++ b/groups.html
@@ -12,6 +12,7 @@
 
     <a href="index.html">Index</a>
     <a href="groups.html">Groups</a>
+    <a href="matches.html">Matches</a>
 
 
     <div id="info">
@@ -20,7 +21,7 @@
         <table id="groupsTable"> </table>
 
     </div>
-    
+
     <script src="AjaxWrapper.js"></script>
     <script src="script.js"></script>
 </body>
