--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <a href="index.html">Index</a>
     <a href="groups.html">Groups</a>
+    <a href="matches.html">Matches</a>
 
     <script src="AjaxWrapper.js"></script>
     <script src="script.js"></script>
