added functionality for teams visualization

--- a/groups.html
+++ b/groups.html
@@ -10,10 +10,11 @@
 
 <body>
 
-    <a href="index.html">Index</a>
-    <a href="groups.html">Groups</a>
-    <a href="matches.html">Matches</a>
-
+   
+        <a href="index.html">Index</a>
+        <a href="groups.html">Groups</a>
+        <a href="matches.html">Matches</a>
+        <a href="teams.html">Teams</a>
 
     <div id="info">
 
