implemented task for history using local storage

--- a/groups.html
+++ b/groups.html
@@ -10,20 +10,25 @@
 
 <body>
 
-   
-        <a href="index.html">Index</a>
-        <a href="groups.html">Groups</a>
-        <a href="matches.html">Matches</a>
-        <a href="teams.html">Teams</a>
 
+    <a href="index.html">Index</a>
+    <a href="groups.html">Groups</a>
+    <a href="matches.html">Matches</a>
+    <a href="teams.html">Teams</a>
+    <a href="search.html">Search</a>
+    <a href="history.html">History</a>
+
+    <br> <br>
     <div id="info">
 
-        <button onclick="getInfoByGroups()">Click me</button>
+        <button onclick="getInfoByGroups()">Show info</button>
         <table id="groupsTable"> </table>
 
     </div>
 
     <script src="AjaxWrapper.js"></script>
+    <script src="LocalStorage.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
