--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projectjs-fifa-game represational page</title>
 </head>
+
 <body>
 
     <a href="index.html">Index</a>
     <a href="groups.html">Groups</a>
     <a href="matches.html">Matches</a>
     <a href="teams.html">Teams</a>
+    <a href="search.html">Search</a>
+    <a href="history.html">History</a>
+
+    <p> Welcome to my fifa/fafa/fufa statistics page!</p>
 
     <script src="AjaxWrapper.js"></script>
+    <script src="LocalStorage.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
