--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Projectjs-fifa-game represational page</title>
 </head>
 
 <body>
-
-    <a href="index.html">Index</a>
-    <a href="groups.html">Groups</a>
-    <a href="matches.html">Matches</a>
-    <a href="teams.html">Teams</a>
-    <a href="search.html">Search</a>
-    <a href="history.html">History</a>
-
+    <ul>
+        <li> <a href="index.html" class="active">Index</a> </li>
+        <li> <a href="groups.html">Groups</a> </li>
+        <li> <a href="matches.html">Matches</a> </li>
+        <li> <a href="teams.html">Teams</a> </li>
+        <li> <a href="search.html">Search</a> </li>
+        <li> <a href="history.html">History</a> </li>
+    </ul>
     <p> Welcome to my fifa/fafa/fufa statistics page!</p>
 
     <script src="AjaxWrapper.js"></script>
