--- a/search.html
+++ b/search.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <ul>
+        <li> <a href="index.html">Index</a> </li>
+        <li> <a href="groups.html">Groups</a> </li>
+        <li> <a href="matches.html">Matches</a> </li>
+        <li> <a href="teams.html">Teams</a> </li>
+        <li> <a href="search.html" class="active">Search</a> </li>
+        <li> <a href="history.html">History</a> </li>
+    </ul>
+    <br><br>
 
-        <a href="index.html">Index</a>
-        <a href="groups.html">Groups</a>
-        <a href="matches.html">Matches</a>
-        <a href="teams.html">Teams</a>
-        <a href="search.html">Search</a>
-        <a href="history.html">History</a>
 
-        <br><br>
-
-      
-        <form>
+    <form>
         Country: <input type="text" id="countryInput" required><br>
         Venue: <input type="text" id="venueInput" required><br>
         <input type="radio" id="elevenRadioButton" value="startingEleven" name="radio"> Starting eleven<br>
         <input type="radio" id="substituesRadioButton" value="substitutes" name="radio"> Substitutes<br>
-        <input type="submit" id="searchButton" required> 
-        </form>
+        <input type="submit" id="searchButton" required>
+    </form>
 
-        <div id="searchInfo">
-        </div>
+    <div id="searchInfo">
+    </div>
 
-        <script src="AjaxWrapper.js"></script>
-        <script src="LocalStorage.js"></script>
-        <script src="script.js"></script>
+    <script src="AjaxWrapper.js"></script>
+    <script src="LocalStorage.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
